fit:l lower version of docker compose

--- a/.gitignore
+++ b/.gitignore
@@ -331,8 +331,9 @@ paket-files/
 *.sln.iml
 
 # IDE - VSCode
+,vscode/*
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
