--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
          - db 
       ports:
         - '4000:4000'
+      networks:
+       - api-network
   db:
       image: postgres
       restart: always
@@ -25,7 +27,9 @@ services:
          - ./PresentationDBData:/var/lib/postgresql
       ports:
          - 5433:5432
-
+      networks:
+       - api-network
+ 
 
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
@@ -39,7 +43,9 @@ services:
  
     volumes:
       - '/:/host:ro,rslave'
-    
+
+networks:
+   api-network:
 
 volumes:
       PresentationDBData:
