--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.3.2",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.3.2",
     "@types/pg": "^8.11.4",
     "dotenv": "^16.4.5",
