--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 version: "3.3"
 
 services: 
-
-
   api:
       depends_on:
       - db
@@ -12,17 +10,17 @@ services:
         target: production
       container_name: api
       restart: always
+      network_mode: "host"
       volumes:
-       - .:/app
+       - .:/usr/src/app
       ports:
         - '4000:4000'
-      networks: 
-      - node-network
 
   db:
       image: postgres
       restart: always
       container_name: db
+      network_mode: "host"
       environment:
         POSTGRES_PASSWORD: postgresPass
         POSTGRES_USER: postgresUser
@@ -30,14 +28,12 @@ services:
       volumes:
          - ./PresentationDBData:/var/lib/postgresql
       ports:
-         - 5433:5432
-      networks: 
-      - node-network
-    
+         - 5432:5432
 
 
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
+    network_mode: "host"
     container_name: node_exporter
     command:
       - '--path.rootfs=/host'
@@ -56,7 +52,3 @@ volumes:
         driver: local
       grafana-data:
         driver: local
-
-networks: 
-  node-network:
-    driver: bridge
