--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,17 @@ services:
         target: production
       container_name: api
       restart: always
-      network_mode: "host"
       volumes:
        - .:/usr/src/app
       ports:
         - '4000:4000'
+      networks:
+       - docker-network
 
   db:
       image: postgres
       restart: always
       container_name: db
-      network_mode: "host"
       environment:
         POSTGRES_PASSWORD: postgresPass
         POSTGRES_USER: postgresUser
@@ -28,12 +28,19 @@ services:
       volumes:
          - ./PresentationDBData:/var/lib/postgresql
       ports:
-         - 5432:5432
-
+       - "5432:5432"
+      healthcheck:
+        test: ["CMD-SHELL", "pg_isready"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+      expose:
+      - 5432
+      networks:
+       - docker-network
 
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
-    network_mode: "host"
     container_name: node_exporter
     command:
       - '--path.rootfs=/host'
@@ -52,3 +59,6 @@ volumes:
         driver: local
       grafana-data:
         driver: local
+networks:
+  docker-network:
+    driver: bridge
