--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,33 @@ services:
     ports:
       - "9100:9100"
     restart: unless-stopped
- 
+    networks:
+      - prometheus-network
     volumes:
       - '/:/host:ro,rslave' 
     
+  
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: unless-stopped
+    volumes:
+      - ./config:/etc/prometheus/
+      - prometheus-data:/prometheus
+    networks:
+      - prometheus-network
+    ports:
+      - "9090:9090"
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - prometheus-network
+    ports:
+      - "3000:3000"
 
 volumes:
       PresentationDBData:
@@ -61,4 +84,6 @@ volumes:
         driver: local
 networks:
   docker-network:
+    driver: bridge
+  prometheus-network:
     driver: bridge
